Hackpad controller implementation