@@ -1,58 +1,65 @@
 package org.awesomeagile.webapp.controller;
 
-import static com.google.common.base.Strings.isNullOrEmpty;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import com.google.common.base.MoreObjects;
+import com.google.common.collect.ImmutableMap;
 
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
 
-import org.awesomeagile.model.team.User;
-import org.awesomeagile.webapp.controller.HackpadPostTest.HackpadStatus;
-import org.awesomeagile.webapp.controller.HackpadPostTest.PadIdentity;
+import org.awesomeagile.annotations.Hackpad;
+import org.awesomeagile.error.ResourceNotFoundException;
+import org.awesomeagile.model.document.HackpadDocumentTemplate;
+import org.awesomeagile.model.document.PadIdentity;
 import org.awesomeagile.webapp.security.AwesomeAgileSocialUser;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth.common.signature.SharedConsumerSecretImpl;
-import org.springframework.security.oauth.consumer.BaseProtectedResourceDetails;
 import org.springframework.security.oauth.consumer.client.OAuthRestTemplate;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.base.MoreObjects;
-import com.google.common.collect.ImmutableMap;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Map;
+import java.util.Objects;
 
 @Controller
 public class HackpadController {
-
-    public static final String CLIENT_ID = "FiE4R5tmkef";
-    public static final String SECRET = "eAvjusoCwiM4jG2yL3lUWZ8C7n3IOWT8";
-    public static final String CREATE_URL = "https://hackpad.com/api/1.0/pad/create";
-    public static final String UPDATE_URL = "https://hackpad.com/api/1.0/pad/{padId}/content";
-    public static final String OPTIONS_URL = "https://hackpad.com/api/1.0/pad/{padId}/options";
+    private static final String CREATE_URL = "/api/1.0/pad/create";
+    private static final String UPDATE_URL = "/api/1.0/pad/{padId}/content";
+    private static final String GET_URL = "/api/1.0/pad/{padId}/content/latest.html";
 
     private final OAuthRestTemplate restTemplate;
+    private final String baseUrl;
+    private final Map<String, HackpadDocumentTemplate> templates;
 
     @Autowired
-    public HackpadController(OAuthRestTemplate restTemplate) {
+    public HackpadController(
+        @Hackpad OAuthRestTemplate restTemplate,
+        @Hackpad String baseUrl,
+        Map<String, HackpadDocumentTemplate> templates) {
         this.restTemplate = restTemplate;
+        this.baseUrl = baseUrl;
+        this.templates = templates;
     }
-    
+
+    private String getHackpad(PadIdentity padIdentity) {
+        return restTemplate.getForObject(
+            GET_URL,
+            String.class,
+            ImmutableMap.of("padId", padIdentity.getPadId()));
+    }
+
     private PadIdentity createHackpad(String title) {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.TEXT_PLAIN);
         HttpEntity<String> entity = new HttpEntity<>("Hackpad Title", headers);
-        PadIdentity padIdentity = restTemplate.postForObject(CREATE_URL, entity, PadIdentity.class);
+        return restTemplate.postForObject(fullUrl(CREATE_URL), entity, PadIdentity.class);
     }
     
     private HackpadStatus updateHackpadContent(PadIdentity padIdentity, String content) {
@@ -60,27 +67,32 @@ public class HackpadController {
         headers.setContentType(MediaType.TEXT_HTML);
         HttpEntity<String> updateEntity = new HttpEntity<>(
                 "<html><body><p><b>Subheader</b></p><p>Regular text</p></body></html>", headers);
-        HackpadStatus status = restTemplate.postForObject(UPDATE_URL, updateEntity, HackpadStatus.class,
+        return restTemplate.postForObject(fullUrl(UPDATE_URL), updateEntity, HackpadStatus.class,
                 ImmutableMap.of("padId", padIdentity.getPadId()));
+
     }
-    
-    
-    @RequestMapping(method = RequestMethod.POST, path = "/api/hackpad")
+
+    @RequestMapping(method = RequestMethod.POST, path = "/api/hackpad/{doctype}")
     @ResponseBody
-    public URL createNewHackpad(@AuthenticationPrincipal AwesomeAgileSocialUser principal)
+    public String createNewHackpad(
+        @AuthenticationPrincipal AwesomeAgileSocialUser principal,
+        @PathVariable("docType") String documentType)
             throws MalformedURLException {
+        HackpadDocumentTemplate template = templates.get(documentType);
+        if (template == null) {
+            throw new ResourceNotFoundException("Bad document type");
+        }
+        PadIdentity identity = createHackpad(template.getTitle());
+        updateHackpadContent(identity, getHackpad(template.getPadIdentity()));
+        return fullUrl(identity.getPadId());
+    }
 
-        User user = principal.getUser();
-
-        BaseProtectedResourceDetails resource = new BaseProtectedResourceDetails();
-        resource.setConsumerKey(CLIENT_ID);
-        resource.setSharedSecret(new SharedConsumerSecretImpl(SECRET));
-        resource.setAdditionalRequestHeaders(ImmutableMap.of("email", "belov.stan@gmail.com"));
-        resource.setAcceptsAuthorizationHeader(false);
-        OAuthRestTemplate restTemplate = new OAuthRestTemplate(resource);
-
-
-        return new URL("");
+    private String fullUrl(String apiUrl) {
+        try {
+            return new URI(baseUrl).resolve(apiUrl).toString();
+        } catch (URISyntaxException ex) {
+            throw new RuntimeException(ex);
+        }
     }
 
     private static class HackpadStatus {
@@ -111,38 +123,6 @@ public class HackpadController {
         @Override
         public String toString() {
             return MoreObjects.toStringHelper(this).add("success", success).toString();
-        }
-    }
-
-    private static class PadIdentity {
-
-        @JsonProperty
-        private String padId;
-
-        public String getPadId() {
-            return padId;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-            PadIdentity that = (PadIdentity) o;
-            return Objects.equals(padId, that.padId);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(padId);
-        }
-
-        @Override
-        public String toString() {
-            return MoreObjects.toStringHelper(this).add("padId", padId).toString();
         }
     }
 
